# slab_mcrt

./: .gitignore  Cargo.toml  plot.py  plot_voronoi.py
src/: gridless_slab.rs  main.rs  regular_grid_slab.rs  slab.rs  vector.rs  voronoi_slab.rs
src/regular_grid_slab/: grid_cell.rs
src/slab/: mod.rs
src/slab/gridless_slab/: mod.rs
src/slab/regular_grid_slab/: grid_cell.rs  mod.rs
src/voronoi_slab/: delaunay.rs  geometry.rs  simulation_domain.rs  voronoi.rs  voronoi_generator.rs
