[package]
name = "slab_mrct"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rayon = "1"
indicatif = {version = "0.16.2", features = ["rayon"]}
ordered-float = "2.7.0"
permutation = "0.2.5"
num-traits = "0.2.14"